err/labmanager.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/labmanager'...
Listing './lib/python3.5/site-packages/labmanager-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/suds'...
Listing './lib/python3.5/site-packages/suds/bindings'...
Compiling './lib/python3.5/site-packages/suds/bindings/binding.py'...
***   File "./lib/python3.5/site-packages/suds/bindings/binding.py", line 104
    raise Exception, 'not implemented'
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/suds/client.py'...
***   File "./lib/python3.5/site-packages/suds/client.py", line 246
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/suds/mx'...
Compiling './lib/python3.5/site-packages/suds/mx/__init__.py'...
***   File "./lib/python3.5/site-packages/suds/mx/__init__.py", line 55
    raise AttributeError, \
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/suds/mx/literal.py'...
***   File "./lib/python3.5/site-packages/suds/mx/literal.py", line 135
    raise Exception, \
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/suds/plugin.py'...
***   File "./lib/python3.5/site-packages/suds/plugin.py", line 207
    raise Exception, 'plugin domain (%s), invalid' % name
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/suds/properties.py'...
***   File "./lib/python3.5/site-packages/suds/properties.py", line 76
    raise Exception, 'Already linked'
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/suds/sax'...
Compiling './lib/python3.5/site-packages/suds/sax/date.py'...
***   File "./lib/python3.5/site-packages/suds/sax/date.py", line 56
    raise ValueError, type(date)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/suds/servicedefinition.py'...
***   File "./lib/python3.5/site-packages/suds/servicedefinition.py", line 247
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/suds/store.py'...
***   File "./lib/python3.5/site-packages/suds/store.py", line 580
    raise Exception, reason
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/suds/sudsobject.py'...
***   File "./lib/python3.5/site-packages/suds/sudsobject.py", line 151
    raise AttributeError, "%s has no attribute '%s'" % (cls, name)
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/suds/transport'...
Compiling './lib/python3.5/site-packages/suds/transport/http.py'...
***   File "./lib/python3.5/site-packages/suds/transport/http.py", line 64
    except u2.HTTPError, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/suds/umx'...
Compiling './lib/python3.5/site-packages/suds/umx/__init__.py'...
***   File "./lib/python3.5/site-packages/suds/umx/__init__.py", line 51
    raise AttributeError, \
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/suds/wsdl.py'...
***   File "./lib/python3.5/site-packages/suds/wsdl.py", line 511
    raise Exception, "msg '%s', not-found" % f.message
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/suds/xsd'...
Compiling './lib/python3.5/site-packages/suds/xsd/deplist.py'...
***   File "./lib/python3.5/site-packages/suds/xsd/deplist.py", line 140
    print [x[0] for x in L.sort()]
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/suds/xsd/query.py'...
***   File "./lib/python3.5/site-packages/suds/xsd/query.py", line 55
    raise Exception, 'not-implemented by subclass'
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/suds/xsd/sxbasic.py'...
***   File "./lib/python3.5/site-packages/suds/xsd/sxbasic.py", line 637
    raise Exception, '%s mismatch' % TNS
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/test'...
Compiling './lib/python3.5/site-packages/test/basetest.py'...
***   File "./lib/python3.5/site-packages/test/basetest.py", line 41
    print client.service.GetConfigurationByName("pagrant1")
               ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
